<resources>
    <string name="app_name">Prescription Pal</string>
    <string name="caretaker_enabled">Caretaker Mode</string>
    <string name="home">Home</string>
    <string name="today">Today</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="today_title">Today\'s Prescriptions</string>
    <string name="history">History</string>
    <string name="patients">My Patients</string>
    <string name="viewpatient">View Patient</string>
    <string name="choosepatient">Choose Patient:</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="confirm">I have taken this today</string>
    <string name="add">+</string>

    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>

    <string name="Time">Select Time</string>

    <string name="font_size">Font Size:</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="notifications">Notification Settings:</string>
    <string name="silent">Silent Mode</string>
    <string name="off">Turn off notifications</string>
    <string name="caretaker">Caretaker Mode:</string>
    <string name="rusure">Are you sure you want to turn on caretaker mode?</string>
    <string name="rusureoff">Are you sure you want to turn off caretaker mode?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="confrim">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="PatientName">Patient Name:</string>
    <string name="PatientAge">Patient Age:</string>
    <string name="PatientInfo">Patient Info:</string>
    <string name="AddPatient">Add Patient</string>
    <string name="Delete">Delete</string>
    <string name="editpatient">Edit Patient</string>
    <string name="Patience">Patients</string>



</resources>
